# keyward

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GUIDE.md  IMPLEMENTATION.md  NOTICE  README.md  SECURITY.md  SPEC.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-server.yml  release-app.yml  release.yml  tag-sdk-go.yml  tag-sdk-rust.yml
apps/executor-desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/executor-desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/executor-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/executor-desktop/src-tauri/capabilities/: default.json
apps/executor-desktop/src-tauri/icons/: icon.icns
apps/executor-desktop/src-tauri/src/: lib.rs  main.rs
apps/executor-desktop/src/components/: CopyButton.tsx  icons.tsx
apps/executor-desktop/src/i18n/: en.ts  index.ts  zh.ts
apps/executor-desktop/src/lib/: api.ts  store.ts
apps/executor-desktop/src/screens/: Dashboard.tsx  Keys.tsx  Pairing.tsx  Policy.tsx  Settings.tsx
apps/executor-desktop/src/styles/: index.css  theme.css.ts  ui.css.ts
crates/keyward/: Cargo.toml
crates/keyward-grpc/: Cargo.toml  README.md  build.rs
crates/keyward-grpc/proto/: keyward.proto
crates/keyward-grpc/src/: lib.rs
crates/keyward-proto/: Cargo.toml
crates/keyward-proto/src/: lib.rs
crates/keyward-sdk/: Cargo.toml  README.md
crates/keyward-sdk/examples/: grpc_chat.rs  relay_chat.rs
crates/keyward-sdk/src/: identity.rs  lib.rs  wire.rs
crates/keyward/data/: model_prices.json
crates/keyward/src/: broker.rs  client.rs  demo.rs  e2e_tests.rs  executor.rs  identity.rs  lib.rs  main.rs  node.rs  orchestrator.rs  pricing.rs  proxy.rs  seal.rs  secret.rs  session.rs  shim.rs  transport.rs  wire.rs
crates/keyward/src/provider/: anthropic.rs  mod.rs  openai.rs
docs/: README.md  faq.md  implementation.md  integration.md  policy.example.json  roadmap.md  spec.md  users.md  walkthrough.md
docs/en/: README.md  faq.md  integration.md  users.md  walkthrough.md
docs/zh/: README.md  faq.md  integration.md  users.md  walkthrough.md
scripts/: refresh-prices.sh
sdk/go/: README.md  go.mod  keyward.go
sdk/go/example/: main.go
