[workspace]
resolver = "2"
members = ["crates/keyward-proto", "crates/keyward", "crates/keyward-sdk", "crates/keyward-grpc"]
# keyward-grpc is the only crate that needs `protoc` to build (tonic codegen). Keep it
# out of the default set so a plain `cargo build` stays pure-Rust; it builds when you
# opt into gRPC (`--features grpc`) or run with `--workspace`.
default-members = ["crates/keyward-proto", "crates/keyward", "crates/keyward-sdk"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/gtoxlili/keyward"
rust-version = "1.95"

[workspace.dependencies]
keyward-proto = { path = "crates/keyward-proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-tungstenite = "0.29"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = { version = "1", features = ["v4"] }
# Pinned to 0.12: 0.13 dropped the pure-Rust `rustls-tls` (ring + webpki-roots) feature.
# Its `rustls` now forces aws-lc-rs (a cmake/C build dep) + rustls-platform-verifier —
# system deps keyward deliberately avoids. Revisit if 0.13 regains a clean ring path.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
secrecy = "0.10"
sha2 = "0.11"
axum = "0.8"
rpassword = "7"

# Reproducible-build posture: deterministic, path-independent release artifacts.
# (See docs verify story; pair with a pinned toolchain + container at release time.)
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
