[package]
name = "keyward-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Keyward v0 wire types and policy engine (transport-agnostic)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
