[package]
name = "keyward-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Keyward Orchestrator SDK — integrate an app as the brain that never holds the key."

[dependencies]
keyward-proto.workspace = true
anyhow.workspace = true
tokio = { workspace = true }
tokio-tungstenite.workspace = true
futures-util.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
