[package]
name = "keyward-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Keyward Node SDK — embed a Node in-process (the app stays unaware; the key stays on the Client)."

[dependencies]
keyward-proto.workspace = true
anyhow.workspace = true
tokio = { workspace = true }
tokio-tungstenite.workspace = true
futures-util.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
serde_json.workspace = true
uuid.workspace = true
keyward-grpc = { path = "../keyward-grpc", optional = true }

[features]
# gRPC transport for the Node side (`serve_one_grpc`). Pulls in keyward-grpc
# (tonic/prost) and needs `protoc` at build time.
grpc = ["dep:keyward-grpc"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[example]]
name = "grpc_chat"
required-features = ["grpc"]
