[package]
name = "keyward"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Keyward reference Executor + a mock Orchestrator for the end-to-end demo."
default-run = "keyward"

[lib]
name = "keyward"
path = "src/lib.rs"

[[bin]]
name = "keyward"
path = "src/main.rs"

[dependencies]
keyward-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
uuid.workspace = true
secrecy.workspace = true
sha2.workspace = true
rpassword.workspace = true
reqwest = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
keyward-grpc = { path = "../keyward-grpc", optional = true }

# Per-platform keychain backend, native only — no system libs. macOS Keychain,
# Windows Credential Manager, and on Linux the kernel keyutils (pure Rust, works
# headless; deliberately NOT the desktop secret-service, which needs libdbus and
# a session bus the typical keyward host doesn't have).
#
# Pinned to 3.x on purpose: keyring 4 reworked into keyring-core + pluggable store
# crates and drops these native-only features — its Linux path pulls in
# dbus-secret-service, exactly the libdbus dependency we removed to keep CI / headless
# hosts clean. Revisit if a 4.x keyutils store lands without D-Bus.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[features]
default = []
# Real provider adapters (pull in reqwest/rustls). The `demo` and the mock
# providers work without them.
openai = ["dep:reqwest"]
anthropic = ["dep:reqwest"]
# Local OpenAI-compatible proxy (`keyward proxy`) — the Orchestrator side with an
# HTTP front. Pulls in axum.
proxy = ["dep:axum"]
# Multi-tenant broker (`keyward broker`) — a shared/public Orchestrator that routes
# each request to the Executor matching its bearer routing token (§8).
broker = ["dep:axum"]
# gRPC transport for the Executor's dial-out (grpc:// / grpcs:// URLs). Pulls in
# keyward-grpc (tonic/prost) and needs `protoc` at build time.
grpc = ["dep:keyward-grpc"]
