[package]
name = "keyward"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Keyward reference Client + Node — non-custodial BYOK (the SaaS stays unaware)."
default-run = "keyward"

[lib]
name = "keyward"
path = "src/lib.rs"

[[bin]]
name = "keyward"
path = "src/main.rs"

[dependencies]
keyward-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
uuid.workspace = true
secrecy.workspace = true
sha2.workspace = true
rpassword.workspace = true
reqwest = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
keyward-grpc = { path = "../keyward-grpc", optional = true }
crypto_box = { version = "0.9", features = ["chacha20"], optional = true }

# Per-platform keychain backend, native only — no system libs. macOS Keychain,
# Windows Credential Manager, and on Linux the kernel keyutils (pure Rust, works
# headless; deliberately NOT the desktop secret-service, which needs libdbus and
# a session bus the typical keyward host doesn't have).
#
# Pinned to 3.x on purpose: keyring 4 reworked into keyring-core + pluggable store
# crates and drops these native-only features — its Linux path pulls in
# dbus-secret-service, exactly the libdbus dependency we removed to keep CI / headless
# hosts clean. Revisit if a 4.x keyutils store lands without D-Bus.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[features]
default = []
# Real provider adapters (pull in reqwest/rustls). The `demo` and the mock
# providers work without them.
openai = ["dep:reqwest"]
anthropic = ["dep:reqwest"]
# The Node server (`keyward node`) — a rendezvous + OpenAI-compatible HTTP front that
# routes each request to the Client matching its bearer routing token (§10); with one
# Client connected, no token is needed (the simple personal-node case). Pulls in axum.
node = ["dep:axum"]
# End-to-end seal layer (§9): the Client decrypts sealed work + encrypts replies, so a
# Node relays only ciphertext. Pulls crypto_box (X25519 + ChaCha20-Poly1305).
seal = ["dep:crypto_box"]
# The requester-side shim (`keyward shim`): a localhost OpenAI front that seals each
# request to the Client's identity key and relays it through a blind Node.
shim = ["seal", "dep:axum", "dep:reqwest"]
# gRPC transport for the Client's dial-out (grpc:// / grpcs:// URLs). Pulls in
# keyward-grpc (tonic/prost) and needs `protoc` at build time.
grpc = ["dep:keyward-grpc"]
